<resources>
    <string name="app_name" translatable="false">Public ID Converter</string>

    <string name="text_require_permission">The storage is needed for using this tool</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="get_file_manager">Download OI File Manager</string>
    <string name="text_require_file_manager">This tool is needed for getting data to use this tool</string>
    <string name="text_name_file_manager" translatable="false">OI FILE MANAGER</string>
    <string name="permission_granted">Permission GRANTED</string>
    <string name="permission_denied">Permission DENIED</string>
    <string name="open_in_setting_ntf">Enable manually in setting</string>
    <string name="open_setting">OPEN SETTING</string>
    <string name="app_installed_ntf">Application is INSTALLED</string>
    <string name="downloading_ntf">Download pending or suspended</string>
    <string name="require_perm_title">Require permission</string>
    <string name="require_perm_info">This app require storage permission to run, please grant it!</string>

    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_log_ntf">Save logs</string>
    <string name="refuse_ntf">I got it</string>
    <string name="toast_save_log">Log saved to %s</string>
    <string name="log_title">PIDC: Message LOG</string>
    <string name="log_canceled">Don\'t save, user cancel</string>
    <string name="path_filled">Path Filled</string>
    <string name="invaild_path">Invaild path</string>
    <string name="start_find_ntf">Start find</string>
    <string name="find_done">FIND DONE</string>
    <string name="start_convert_ntf">Start find and convert</string>
    <string name="convert_done">Convert done</string>
    <string name="converting">Converting...</string>
    <string name="save_new_data" translatable="false">Save data to new Directory</string>
    <string name="save_data_to_dir" translatable="false">Save new data...</string>
    <string name="finding">Finding...</string>
    <string name="src_public_path">Path to source public.xml</string>
    <string name="port_public_path">Path to Port Public.xml</string>
    <string name="smali_path">Path to Smali Directory</string>
    <string name="start_convert">Start Convert</string>
    <string name="start_find">"Find ID only "</string>
</resources>
